--- a/pillar.example
+++ b/pillar.example
@@ -11,3 +11,4 @@ intellij:
   unpack_opts: -z -C /usr/share/java/idea-IC-17-1.4 --strip-components=1
   intellij_symlink: /usr/bin/idea.sh
   intellij_realcmd: /opt/intellij/bin/idea.sh
+  alt_priority: 30
