--- a/intellij/files/intellij.desktop
+++ b/intellij/files/intellij.desktop
@@ -2,7 +2,7 @@
 Encoding=UTF-8
 Name=IDEA IntelliJ
 Comment=JetBrains IntelliJ IDEA (Java IDE)
-Icon=/opt/intellij/icon.png
+Icon=/opt/intellij/bin/idea.png
 Exec=idea.sh
 Terminal=false
 Type=Application
