--- a/pillar.example
+++ b/pillar.example
@@ -1,14 +1,14 @@
 intellij_home: /opt/intellij
 intellij:
   year: 17
-  release: 1.4
-  source_url: https://download-cf.jetbrains.com/idea/ideaIC-2017.1.4-no-jdk.tar.gz
-  source_hash: https://download.jetbrains.com/idea/ideaIC-2017.1.4-no-jdk.tar.gz.sha256
+  release: 2
+  source_url: https://download-cf.jetbrains.com/idea/ideaIC-2017.2-no-jdk.tar.gz
+  source_hash: https://download.jetbrains.com/idea/ideaIC-2017.2-no-jdk.tar.gz.sha256
   prefix: /usr/share/java
   archive_type: tar
   dl_opts: 
-  intellij_real_home: /usr/share/java/idea-IC-17.1.4
-  unpack_opts: -z -C /usr/share/java/idea-IC-17-1.4 --strip-components=1
-  intellij_symlink: /usr/bin/idea.sh
-  intellij_realcmd: /opt/intellij/bin/idea.sh
+  unpack_opts: -z -C /usr/share/java/idea-IC-17-2 --strip-components=1
+  real_home: /usr/share/java/idea-IC-17.2
+  symlink: /usr/bin/idea.sh
+  realcmd: /opt/intellij/bin/idea.sh
   alt_priority: 30
