--- a/intellij/defaults.yaml
+++ b/intellij/defaults.yaml
@@ -3,16 +3,16 @@
 intellij:
   prefix: /usr/lib/jetbrains
   tmpdir: /tmp/jetbrainstmp
-  symlink: /usr/bin/intellij
-  symhome: /opt/jetbrains/intellij
   command: /bin/idea.sh
   homes: /home
   osflavour: linuxWithoutJDK
 
   jetbrains:
+    home: /opt/jetbrains
+    uri: https://data.services.jetbrains.com/products/releases?latest=true&code=
+    #See https://www.jetbrains.com/help/idea/meet-intellij-idea.html
     product: II
     edition: C
-    uri: https://data.services.jetbrains.com/products/releases?latest=true&code=
 
   dl:
     archive_type: tar
@@ -22,17 +22,15 @@ intellij:
     source_url:
     src_hashfile:
     src_hashsum:
-    archive_name:
-    unpack_opts:
 
-  alt:
-    priority: 170
-    realhome: 
-    realcmd:
+  linux:
+    altpriority: 170
+    symlink: /usr/bin/intellij
 
   prefs:
     user: undefined_user
-    importurl:
-    importdir:
-    jarfile: intellij-prefs.jar
+    #See https://www.jetbrains.com/help/idea/exporting-and-importing-settings.html
+    jarurl:
+    jardir:
+    jarfile: intellij-settings.jar
 
