Add clean:True when precreating extractdirs; Set default prefix to /usr/local/

--- a/intellij/defaults.yaml
+++ b/intellij/defaults.yaml
@@ -1,7 +1,7 @@
 #Default Look Dictionary
 
 intellij:
-  prefix: /usr/lib/jetbrains
+  prefix: /usr/local/jetbrains
   tmpdir: /tmp/jetbrainstmp
   command: /bin/idea.sh
   homes: /home
