Better group handling (posix/ADS)

--- a/intellij/defaults.yaml
+++ b/intellij/defaults.yaml
@@ -30,6 +30,7 @@ intellij:
 
   prefs:
     user:
+    group:
     #See https://www.jetbrains.com/help/idea/exporting-and-importing-settings.html
     jarurl:
     jardir:
