--- a/pillar.example
+++ b/pillar.example
@@ -7,6 +7,11 @@ intellij:
     #Enable Debian alternatives feature by setting nonzero 'altpriority' value here.
     #Increase same value on each subsequent software installation.
     #altpriority: 170
+
+    #On freedesktop.org-compliant desktops, enable Icon on Linux launchers.
+    #Place a .desktop file in e.g. /usr/share/applications (default is True)
+    install_desktop_file: True
+    desktop_file: /usr/share/applications/intellij.desktop
   dl:
     retries: 1
     interval: 30
