fix(flavour): linuxwithoutjdk renamed to linuxwithoutjbr

--- a/intellij/defaults.yaml
+++ b/intellij/defaults.yaml
@@ -5,7 +5,7 @@ intellij:
   tmpdir: /tmp/jetbrainstmp
   command: /bin/idea.sh
   homes: /home
-  osflavour: linuxWithoutJDK
+  osflavour: linuxWithoutJBR  #previously called linuxWithoutJDK
 
   jetbrains:
     home: /opt/jetbrains
