--- a/intellij/defaults.yaml
+++ b/intellij/defaults.yaml
@@ -1,43 +1,61 @@
-#Default Look Dictionary
-
+# -*- coding: utf-8 -*-
+# vim: ft=yaml
+---
 intellij:
-  prefix: /usr/local/jetbrains
-  tmpdir: /tmp/jetbrainstmp
+  product: II   # Intellij IDEA
+  release: latest
+  version: latest
+  edition: C       # community or U (ultimate)
   command: /bin/idea.sh
-  homes: /home
-  osflavour: linuxWithoutJBR  #previously called linuxWithoutJDK
+  config_file: None
+  config: {}
+  environ_file: /etc/default/intellij.sh
+  environ: []
 
-  jetbrains:
-    home: /opt/jetbrains
-    uri: https://data.services.jetbrains.com/products/releases?latest=true&code=
-    #See https://www.jetbrains.com/help/idea/meet-intellij-idea.html
-    product: II
-    edition: C
+  dir:
+    archive: /usr/local/jetbrains
+    homes: /home
+    tmp: /tmp/epp/intellij
+    name: 'Intellij IDEA'
 
-  dl:
-    archive_type: tar
-    opts: -s -L
-    interval: 60
-    retries: 2
-    source_url:
-    src_hashfile:
-    src_hashsum:
+  pkg:
+    name: intellij
+    release: None
+    use_upstream_archive: true
+    use_upstream_macapp: false
+    deps:
+      - curl
+      - tar
+      - gzip
+    repo: {}
+    suffix: tar.gz
+    tag: linuxWithoutJBR
+    macapp: {}
+    archive:
+      name: None
+      uri: 'https://data.services.jetbrains.com/products/releases?latest=true&code='
+      # See https://www.jetbrains.com/help/idea/meet-intellij-idea.html
+      source_hash: None
+      enforce_toplevel: false
+      trim_output: true
+      options: '--strip-components=1'
+
+  identity:
+    rootuser: root
+    rootgroup: root
+    user: undefined_user
+
+  retry_option:
+    # https://docs.saltstack.com/en/latest/ref/states/requisites.html#retrying-states
+    attempts: 2
+    until: true
+    interval: 10
+    splay: 10
 
   linux:
-    symlink: /usr/bin/intellij
-    #debian alternatives is disabled by default. Activated via pillar value.
+    symlink: /usr/local/bin/intellij
     altpriority: 0
-
-    #On freedesktop.org-compliant desktops, enable Icon on Linux launchers.
-    #Place a .desktop file in e.g. /usr/share/applications
-    install_desktop_file: True
+    # On freedesktop.org-compliant desktops, enable Icon on Linux launchers.
+    # Place a .desktop file in e.g. /usr/share/applications
+    install_desktop_file: true
     desktop_file: /usr/share/applications/intellij.desktop
-
-  prefs:
-    user:
-    group:
-    #See https://www.jetbrains.com/help/idea/exporting-and-importing-settings.html
-    jarurl:
-    jardir:
-    jarfile: intellij-settings.jar
-
