--- a/pillar.example
+++ b/pillar.example
@@ -3,7 +3,7 @@
 ---
 intellij:
   edition: C       # community
-  flavour: linuxWithoutJBR  # linux
+  # flavour: linuxWithoutJBR  # linux
   environ:
     a: b
   pkg:
