--- a/intellij/defaults.yaml
+++ b/intellij/defaults.yaml
@@ -54,7 +54,9 @@ intellij:
   linux:
     symlink: /usr/local/bin/intellij
     altpriority: 0
+
+  shortcut:
     # On freedesktop.org-compliant desktops, enable Icon on Linux launchers.
     # Place a .desktop file in e.g. /usr/share/applications
-    install_desktop_file: true
-    desktop_file: /usr/share/applications/intellij.desktop
+    install: true
+    file: /usr/share/applications/intellij.desktop
