--- a/kitchen.yml
+++ b/kitchen.yml
@@ -316,6 +316,7 @@ suites:
       state_top:
         base:
           '*':
+            - intellij._mapdata
             - intellij.clean
             - intellij
       pillars:
@@ -337,6 +338,7 @@ suites:
       state_top:
         base:
           '*':
+            - intellij._mapdata
             - intellij.clean
             - intellij
       pillars:
