--- a/pillar.example
+++ b/pillar.example
@@ -3,7 +3,7 @@
 ---
 intellij:
   edition: C       # community
-  # flavour: linuxWithoutJBR  # linux, mac, windowsZip, windows
+  # flavour: linux  # mac, windowsZip, windows
   environ:
     a: b
   pkg:
